refactor: [PRODUCT-API-REFACTORING] 상품 api 일부 로직 수정, 리팩토링